fix register form being covered on small screen size

--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -3,6 +3,13 @@
   max-width: 500px;
 }
 
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .mat-icon {
   overflow: hidden;
   width: 48px;
